Make gradient background global

--- a/src/RecruitMe.MobileApp/app/_app-variables.scss
+++ b/src/RecruitMe.MobileApp/app/_app-variables.scss
@@ -3,6 +3,10 @@
 // for example '~nativescript-theme-core/scss/dark'.
 @import '~nativescript-theme-core/scss/light';
 
+// Login page colors
+$login-left-color: #39B994;
+$login-right-color: #337FC7;
+
 // Custom colors
 $background-dark: #F8F8F8 !default;
 $background-light: #FFFFFF !default;
