Navigate from Home to Login

--- a/src/RecruitMe.MobileApp/app/_app-variables.scss
+++ b/src/RecruitMe.MobileApp/app/_app-variables.scss
@@ -6,6 +6,7 @@
 // Login page colors
 $login-left-color: #39B994;
 $login-right-color: #337FC7;
+$login-button-color: #4BD5DC;
 
 // Custom colors
 $background-dark: #F8F8F8 !default;
