Enabled logging in

--- a/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
@@ -1,5 +1,7 @@
 <template>
     <div>
+        <router-link to="/register" class="btn btn-link">Register</router-link>
+        <router-link to="/login" class="btn btn-link">Login</router-link>
         <p>This is  the home page of this project </p>
         <p>Here is a picture of a cat</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
