Frontend support for personalData, localstorage fixes

--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -19,14 +19,7 @@
                         </router-link>
                     </li>
                     <li>
-                        <router-link to="/counter">
-                            <span class="glyphicon glyphicon-education"></span> Counter
-                        </router-link>
-                    </li>
-                    <li>
-                        <router-link to="/fetchdata">
-                            <span class="glyphicon glyphicon-th-list"></span> Fetch data
-                        </router-link>
+                             {{name}}
                     </li>
                 </ul>
             </div>
@@ -34,4 +27,5 @@
     </div>
 </template>
 
+<script src="./navmenu.ts" />
 <style src="./navmenu.css" />
