--- a/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
@@ -1,4 +1,3 @@
-
 <script src="./register.ts"></script>
 <template>
     <div>
@@ -6,18 +5,22 @@
         <form @submit.prevent="handleSubmit">
             <div class="form-group">
                 <label for="email">Usernaemailme</label>
-                <input type="text" v-model="email" name="email" class="form-control" :class="{ 'is-invalid': submitted && !email }" />
+                <input type="text" v-model="email" name="email" class="form-control"
+                    :class="{ 'is-invalid': submitted && !email }" />
                 <div v-show="submitted && !email" class="invalid-feedback">email is required</div>
             </div>
             <div class="form-group">
                 <label htmlFor="password">Password</label>
-                <input type="password" v-model="password" name="password" class="form-control" :class="{ 'is-invalid': submitted && !password }" />
+                <input type="password" v-model="password" name="password" class="form-control"
+                    :class="{ 'is-invalid': submitted && !password }" />
                 <div v-show="submitted && !password" class="invalid-feedback">Password is required</div>
             </div>
             <div class="form-group">
                 <label htmlFor="confirmPassword">confirmPassword</label>
-                <input type="password" v-model="confirmPassword" name="confirmPassword" class="form-control" :class="{ 'is-invalid': submitted && password != confirmPassword }" />
-                <div v-show="submitted && password != confirmPassword" class="invalid-feedback">Password is doesnt match</div>
+                <input type="password" v-model="confirmPassword" name="confirmPassword" class="form-control"
+                    :class="{ 'is-invalid': submitted && password != confirmPassword }" />
+                <div v-show="submitted && password != confirmPassword" class="invalid-feedback">Password is doesnt match
+                </div>
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" :disabled="fetching">Register</button>
