--- a/src/RecruitMe.Web/ClientApp/components/recruit/personalData/personalData.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruit/personalData/personalData.vue.html
@@ -5,17 +5,27 @@
         <form @submit.prevent="handleSubmit">
 
             <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" v-model="name" name="name" class="form-control"
-                    :class="{ 'is-invalid': submitted && !name }" />
-                <div v-show="submitted && !name" class="invalid-feedback">name is required</div>
+                <label for="adress">Adress</label>
+                <input type="text" v-model="adress" name="adress" class="form-control" />
+                <div v-show="submitted && !adress" class="invalid-feedback">adress is required</div>
             </div>
 
             <div class="form-group">
-                <label htmlFor="surname">Surname</label>
-                <input type="surname" v-model="surname" name="surname" class="form-control"
-                    :class="{ 'is-invalid': submitted && !surname }" />
-                <div v-show="submitted && !surname" class="invalid-feedback">Surname is required</div>
+                <label htmlFor="fatherName">FatherName</label>
+                <input type="text" v-model="fatherName" name="fatherName" class="form-control" />
+                <div v-show="submitted && !fatherName" class="invalid-feedback">FatherName is required</div>
+            </div>
+
+            <div class="form-group">
+                <label htmlFor="motherName">MotherName</label>
+                <input type="text" v-model="motherName" name="motherName" class="form-control" />
+                <div v-show="submitted && !motherName" class="invalid-feedback">MotherName is required</div>
+            </div>
+
+            <div class="form-group">
+                <label htmlFor="primarySchool">PrimarySchool</label>
+                <input type="text" v-model="primarySchool" name="primarySchool" class="form-control" />
+                <div v-show="submitted && !primarySchool" class="invalid-feedback">PrimarySchool is required</div>
             </div>
 
             <div class="form-group">
