Front end authorization redo

--- a/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
@@ -1,14 +1,7 @@
 <template>
     <div>
-        <router-link to="/register" class="btn btn-link">Register</router-link>
-        <router-link to="/login" class="btn btn-link">Login</router-link>
-        <router-link to="/recruit/personalData" class="btn btn-link">personalData</router-link>
-        <router-link to="/recruit/image" class="btn btn-link">image</router-link>
-        <router-link to="/recruit/payment" class="btn btn-link">payment</router-link>
-        <router-link to="/recruit/pickDate" class="btn btn-link">pickDate</router-link>
-
         <p>This is the home page of this project </p>
         <p>Here is a picture of a cat</p>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
+        <img width="100" height="100" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
     </div>
 </template>
