--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -1,4 +1,3 @@
-<script src="./personalData.ts"></script>
 <template>
     <div>
         <h2>personalData</h2>
@@ -35,3 +34,4 @@
         </form>
     </div>
 </template>
+<script src="./profile.ts"></script>
