--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -1,28 +1,17 @@
 <template>
-    <div class="main-nav">
-        <div class="navbar navbar-inverse">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">RecruitMe.Web</a>
+    <div class="">
+        <div class="row">
+            <div class="left-menu">
+                <router-link to="/" class="">RecruitMe.Web</router-link>
             </div>
-            <div class="clearfix"></div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <router-link to="/" :exact="true">
-                            <span class="glyphicon glyphicon-home"></span> Home
-                        </router-link>
-                    </li>
-                    <li>
-                        {{name}}
-                    </li>
-                </ul>
+            <div class="right-menu float-right" v-if="!displayName">
+                <router-link to="/register" class="btn btn-link">Register</router-link>
+                <router-link to="/login" class="btn btn-link">Login</router-link>
             </div>
+            <div class="right-menu float-right" v-if="displayName">
+                <router-link to="/recruitment/profile" class="btn btn-link">Profile</router-link>
+                <button class="btn btn-link" v-on:click="logout()">Logout</button>
+            </div> 
         </div>
     </div>
 </template>
