Login/register refactor - vue side

--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -5,8 +5,8 @@
                 <router-link to="/" class="">RecruitMe.Web</router-link>
             </div>
             <div class="right-menu float-right" v-if="!displayName">
-                <router-link to="/register" class="btn btn-link">Register</router-link>
-                <router-link to="/login" class="btn btn-link">Login</router-link>
+                <router-link to="/account/register" class="btn btn-link">Register</router-link>
+                <router-link to="/account/login" class="btn btn-link">Login</router-link>
             </div>
             <div class="right-menu float-right" v-if="displayName">
                 <router-link to="/recruitment/profile" class="btn btn-link">Profile</router-link>
