--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -1,6 +1,6 @@
 <template>
     <div>
-        <h2>personalData</h2>
+        <h2>Profile</h2>
         <form @submit.prevent="handleSubmit">
 
             <div class="form-group">
@@ -28,7 +28,7 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-primary" :disabled="fetching">Submit</button>
+                <button class="btn btn-primary" v-disabled="fetching">Submit</button>
                 <img v-show="fetching" />
             </div>
         </form>
