Finished registration & login paths

--- a/src/RecruitMe.Web/ClientApp/components/account/remindLogin/remindLogin.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/remindLogin/remindLogin.vue.html
@@ -1,5 +1,4 @@
-﻿<script src="./register.ts"></script>
-<template>
+﻿<template>
     <div>
     <div v-if="!loginReminded">
         <h2>Przypomnij login</h2>
@@ -41,3 +40,5 @@
     </div>
     </div>
 </template>
+
+<script src="./remindLogin.ts"></script>
