--- a/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
@@ -1,5 +1,4 @@
-﻿<script src="./register.ts"></script>
-<template>
+﻿<template>
     <div>
     <div v-if="!passwordResetCompleted">
         <h2>Reset Password</h2>
@@ -23,3 +22,5 @@
     </div>
     </div>
 </template>
+
+<script src="./resetPassword.ts"></script>
