--- a/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
@@ -19,6 +19,7 @@
             </div>
             <div class="form-group">
                 <button class="btn btn-primary" v-disabled="fetching">Login</button>
+                <span v-show="failed"> Logowanie sie nie udalo - sprawdz podany login i haslo</span>
                 <img v-show="fetching" />
                 <router-link to="/account/register" class="btn btn-link">Register</router-link>
             </div>
