--- a/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
@@ -44,7 +44,7 @@
             </div>
 
         <div class="form-group">
-            <button class="btn btn-primary" v-disabled="fetching">Zarejestruj sie</button>
+            <button class="btn btn-primary" :disabled="fetching">Zarejestruj sie</button>
             <div v-show="backendError"> {{backendError}} </div>
             <img v-show="fetching" />
         </div>
