--- a/src/RecruitMe.Web/ClientApp/components/account/remindLogin/remindLogin.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/remindLogin/remindLogin.vue.html
@@ -28,7 +28,7 @@
             </div>
             
             <div class="form-group">
-                <button class="btn btn-primary" v-disabled="fetching">Sprawdz moj login</button>
+                <button class="btn btn-primary" :disabled="fetching">Sprawdz moj login</button>
                 <div v-show="backendError"> {{backendError}} </div>
                 <img v-show="fetching" />
             </div>
