--- a/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
@@ -10,7 +10,7 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-primary" v-disabled="fetching">Send reset password link</button>
+                <button class="btn btn-primary" :disabled="fetching">Send reset password link</button>
                 <div v-show="backendError"> {{backendError}} </div>
                 <img v-show="fetching" />
             </div>
