--- a/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
@@ -18,7 +18,7 @@
                 </div>
 
                 <div class="form-group">
-                    <button class="btn btn-primary" v-disabled="fetching">Set new password</button>
+                    <button class="btn btn-primary" :disabled="fetching">Set new password</button>
                     <div v-show="backendError"> {{backendError}} </div>
                     <img v-show="fetching" />
                 </div>
