--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -30,14 +30,14 @@
                     </div>
         
                     <div class="form-group">
-                        <button class="btn btn-primary" v-disabled="fetching">Submit</button>
+                        <button class="btn btn-primary" :disabled="fetching">Submit</button>
                         <img v-show="fetching" />
                     </div>
                 </form>
         </div>
         
         <div class="profile-picture col-md-6" > 
-            <PictureInput></PictureInput>
+            <PictureInput @picture-confirmed="PictureConfirmed"></PictureInput>
         </div>
         
     </div>
