--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -37,7 +37,7 @@
         </div>
         
         <div class="profile-picture col-md-6" > 
-            <PictureInput @picture-confirmed="PictureConfirmed"></PictureInput>
+            <PictureInput @picture-confirmed="PictureConfirmed" :fileId="profilePictureFileId" :fileName="profilePicName"></PictureInput>
         </div>
         
     </div>
