--- a/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.css
+++ b/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.css
@@ -28,3 +28,11 @@
 .overlay {
     visibility: hidden;
 }
+
+.picture-name {
+    align-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
