--- a/src/RecruitMe.Web/ClientApp/components/app/app.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/app/app.vue.html
@@ -1,7 +1,9 @@
 <template>
     <div id='app-root' class="container-fluid">
-        <menu-component />
-        <router-view></router-view>
+        <v-app>
+            <menu-component />
+            <router-view></router-view>
+        </v-app>
     </div>
 </template>
 
