--- a/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
@@ -1,7 +1,11 @@
 <template>
-    <div>
-        <p>This is the home page of this project </p>
-        <p>Here is a picture of a cat</p>
-        <img width="100" height="100" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
-    </div>
+    <v-container bg fill-height grid-list-md text-xs-center>
+        <v-layout row wrap align-center>
+            <v-flex>
+                <p>This is the home page of this project </p>
+                <p>Here is a picture of a cat</p>
+                <img width="100" height="100" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
+            </v-flex>
+        </v-layout>
+    </v-container>
 </template>
